--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "16.8.4",
     "@types/request": "^2.48.1",
     "@types/request-promise-native": "^1.0.16",
+    "@types/uuid": "^3.4.5",
     "@types/web3": "^1.0.19",
     "notistack": "^0.8.8",
     "react": "^16.8.6",
@@ -21,6 +22,7 @@
     "request": "^2.88.0",
     "request-promise-native": "^1.0.7",
     "typescript": "3.4.5",
+    "uuid": "^3.3.3",
     "web3": "^1.2.1",
     "winston": "^3.2.1"
   },
