--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "SibosYellowFrontEnd",
-  "version": "0.1.0",
+  "name": "sibos-payidentity-frontend ",
+  "version": "0.1.1",
   "private": true,
-  "homepage": "http://oisinkyne.github.io/SibosYellowFrontEnd",
+  "homepage": "http://jksdua.github.io/sibos-payidentity-frontend ",
   "dependencies": {
     "@material-ui/core": "^4.1.3",
     "@material-ui/icons": "^4.2.1",
